syntax = "proto3";

package lerp;

import "common.proto";


enum UdpMsgDownType {
    GAME_ENTITY_UPDATE = 0;
    GAME_ENTITY_REMOVED = 1;
    USER_CONNECT_SUCCESS = 3;
    USER_CONNECT_FAILED = 4;
    USER_DISCONNECT_SUCCESS = 5;
    USER_CREATE_WORDL_INSTANCE_SUCCESS = 6;
    USER_LEAVE_WORLD_INSTANCE_SUCCESS = 7;
    AREA_INIT = 8;
}

message UdpMsgDownGameEntityUpdate {
    uint32 id = 1;
    GameEntityBaseType object_type = 2;
    Point location_current = 3;
    repeated Point location_target_queue = 4;
    float velocity_speed = 5;
    Point collider_dmg_in_rect = 6;
    UdpColliderMvt collider_mvt = 7;
    uint32 health_current = 8;
    bool is_self = 9;
    UdpCast cast = 10;
}

message UdpColliderMvt {
    bool reversed = 1;
    Point rect = 2;
    repeated Point poly = 3;
}

message UdpCast {
    UdpSpell spell = 1;
    Point target = 2;
    uint32 duration = 3;
}

message UdpMsgDownGameEntityRemoved {
    uint32 id = 1;
}

message UdpMsgDownUserConnectFailed {
    string error_message = 1;
}

message UdpMsgDownUserCreateWorldInstanceSuccess {
    string id = 1;
}

message UdpMsgDownAreaInit {
    float width = 1;
    float height = 2;
    repeated uint32 walkable_x = 3;
    repeated uint32 walkable_y = 4;
    repeated UdpPolygon oob_polygons = 5;
}


message UdpMsgDown {
    UdpMsgDownType _type = 1;
    UdpMsgDownGameEntityUpdate game_entity_update = 2;
    UdpMsgDownGameEntityRemoved game_entity_removed = 3;
    UdpMsgDownUserConnectFailed user_connect_failed = 4;
    UdpMsgDownUserCreateWorldInstanceSuccess user_create_world_instance_success = 5;
    UdpMsgDownAreaInit area_init = 6;
}

message UdpMsgDownWrapper {
    uint64 server_time = 1;
    repeated UdpMsgDown messages = 2;
}